--- a/.github/workflows/build_push.yaml
+++ b/.github/workflows/build_push.yaml
@@ -20,11 +20,24 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
-
-      - run: cd image && docker build --rm --force-rm --tag fzyzcjy/jupyter_docker:v1.0.1 .
-        env:
-          BUILDKIT_PROGRESS: plain # Full logs for CI build
-
-      - run: cd image && docker build --rm --force-rm --tag fzyzcjy/jupyter_docker:v1.0.1 .
-        env:
-          BUILDKIT_PROGRESS: plain # Full logs for CI build
+      # https://docs.docker.com/build/ci/github-actions/manage-tags-labels/
+      # https://github.com/docker/metadata-action
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: fzyzcjy/jupyter-docker
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Build and push
+        uses: docker/build-push-action@v5
+        with:
+          context: ./image
+          push: ${{ github.event_name != 'pull_request' }}
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
