--- a/.github/workflows/build_push.yaml
+++ b/.github/workflows/build_push.yaml
@@ -31,7 +31,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: fzyzcjy
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Build and push
         uses: docker/build-push-action@v5
