--- a/.github/workflows/build_push.yaml
+++ b/.github/workflows/build_push.yaml
@@ -16,6 +16,9 @@ jobs:
     name: 'Primary'
     runs-on: ubuntu-latest
     steps:
+      - uses: catchpoint/workflow-telemetry-action@v1
+        with:
+          comment_on_pr: false
       - uses: actions/checkout@v4
         with:
           submodules: recursive
